# cargo-ya-wasi-pkg

./: Cargo.toml  README.md
src/: main.rs  manifest.rs  repo.rs
