[package]
name = "cargo-ya-wasi-pkg"
version = "0.1.0"
authors = ["Przemysław K. Rekucki <prekucki@rcl.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
cargo_metadata = "0.11.2"
serde_json="1.0.57"
serde = { version="1.0", features=["derive"]}
zip="0.5.7"
reqwest = { version = "0.10", features = ["blocking"] }
sha3="0.9"
trust-dns-resolver = "0.19.5"
anyhow="1.0.32"
hex="*"
#ya-runtime-wasi = { git = "https://github.com/golemfactory/ya-runtime-wasi.git", branch="prekucki/sgx-profile" }